@@ -3,6 +3,12 @@ GTM OAuth 2 Release Notes
 Project site:     http://code.google.com/p/gtm-oauth2/
 Discussion group: http://groups.google.com/group/gtm-oauth2
 
+4-May-2011
+
+Addded support for services which provide access tokens, but no
+refresh tokens.
+
+
 Release 1.0.0
 6-April-2011
 
